--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
+                <!--<i class="fas fa-camera fa-3x my-3"></i>-->
+                <!--<i class="fa-solid fa-database fa-3x my-3"></i-->
+                <i class="fa-solid fa-rectangle-terminal"></i>
                 <h3 class="my-3 fw-bold">Desarrollo Back End</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -90,7 +92,8 @@
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
+                <!--<i class="fas fa-bullhorn fa-3x my-3"></i>-->
+                <i class="fa-solid fa-database fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Ciencia de Datos</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -100,8 +103,9 @@
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Iteligencia Artificial</h3>
+                <!--<i class="fa-solid fa-microchip-ai fa-3x my-3"></i>-->
+                <i class="fa-sharp fa-solid fa-microchip-ai fa-bounce fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Inteligencia Artificial</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -224,6 +228,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
+    <script src="https://kit.fontawesome.com/e489953b08.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
