--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <!--<i class="fas fa-camera fa-3x my-3"></i>-->
-                <!--<i class="fa-solid fa-database fa-3x my-3"></i-->
-                <i class="fa-solid fa-rectangle-terminal"></i>
+                <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Desarrollo Back End</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -91,8 +89,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <!--<i class="fas fa-bullhorn fa-3x my-3"></i>-->
-                <i class="fa-solid fa-database fa-3x my-3"></i>
+                <i class="fas fa-bullhorn fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Ciencia de Datos</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -102,8 +99,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <!--<i class="fa-solid fa-microchip-ai fa-3x my-3"></i>-->
-                <i class="fa-sharp fa-solid fa-microchip-ai fa-bounce fa-3x my-3"></i>
+                <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Inteligencia Artificial</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -123,8 +119,8 @@
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
-                    <div class="card-body">
+                    <div class="image-top" style="background-image: url(assets/img/yoRegaloVida.jpg)"></div>
+                    <div class=" card-body">
                         <h5 class="card-title fw-bold">Yo Regalo Vida</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -140,7 +136,7 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/poketoria.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Poketoria</h5>
                         <p class="card-text">
@@ -157,7 +153,7 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/weStudy.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">We Study</h5>
                         <p class="card-text">
